--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@
 
 
 body {
-    font-family: noto-sans, sans-serif;
+    font-family: baskerville-urw, serif;
     font-weight: 400;
     font-style: normal;
     color: #333;
@@ -59,7 +59,7 @@ body {
     Based on Traditional Typographic Scale
     48, 36, 24, 21, 18, 16 */
 h1, h2, h3, h4, h5, h6 {
-    font-family: baskerville-urw, serif;
+    font-family: linotype-sabon, sans-serif;
     font-weight: 400;
     font-style: normal;
     margin: 0.5em 0;
@@ -122,12 +122,12 @@ em {
 
 /* LINKS */
 a {
-    color: #036;
+    color: rgb(144 23 56);
     text-decoration: none;
 }
 
 a:hover {
-    color: #003;
+    color: rgba(183, 88, 88, 1);
 }
 
 /* HELPER CLASSES */
@@ -372,7 +372,7 @@ body {
 
 /* Header & Footer */
 .site-header a {
-    color: #fff;
+    color: #333;
 }
 
 .site-footer a {
@@ -385,7 +385,7 @@ body {
 
 /* Header Only */
 .site-header {
-    background: #EB7D90;
+    background-color: transparent;
     border-bottom: 0px solid #ccc;
     padding: 0.5em 4%;
 }
@@ -417,7 +417,7 @@ body {
 
 /* Footer Only */
 .site-footer {
-    background: rgba(234, 245, 251, 1);
+    /* background: rgba(234, 245, 251, 1); */
     border-top: 0px solid #ccc;
 }
 .site-footer .container {
@@ -435,34 +435,22 @@ body {
 /* Main Site Section (Main Content Area) */
 .site-main {
     background: rgba(234, 245, 251, 1);
-    margin-top: 3em;
-    margin-bottom: 5em;
+    h1 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
-/* PORTFOLIO INDEX PINK BACKGROUND */
+/* SPECIFIC PAGE CUSTOMIZATIONS */
 .landing {
-    background-color: #EB7D90;
-}
-
-.landing .site-main {
-    margin-top: 7svh;
+    h3 {
+        margin-top: 5svh;
+    }
     h2 {
-        margin-top: 0;
-        color: rgb(241, 251, 234);
+        margin-bottom: 1svh;
     }
-    p {
-        color: rgb(241, 251, 234);
-    }
-}
 
-.landing .site-footer {
-    a {
-        color: rgb(241, 251, 234);
-    }
-    a:hover {
-        color: rgb(171, 55, 99);
-        text-decoration: none;
-    }
 }
 
 /* Main Sections */
@@ -480,8 +468,9 @@ section {
 .hero {
     /* background: rgba(223, 236, 253, 1); */
     border-top: none;
-    padding: 4em 1em 3em 1em;
+    padding: 8em 1em 8em 1em;
     margin-bottom: 1.5em;
+    background-color: rgba(223, 236, 253, 1);
 }
 .hero h1, .hero h2 {
     font-style: 3em;
@@ -499,41 +488,6 @@ section {
 .hero.full-width {
     margin-top: 0;
     margin-bottom: 0;
-}
-
-/* Articles */
-article {
-    max-width: 38em;
-    margin: 0 auto 8em auto;
-    padding: 2em 0;
-}
-article h1 {
-    text-align: center;
-}
-article h1 + h2 {
-    text-align: center;
-    font-size: 1.5em;
-    line-height: 1.25em;
-    font-weight: normal;
-    margin-bottom: 1em;
-}
-article .date {
-    text-align: center;
-    font-size: 0.625em;
-    line-height: 0.625em;
-    color: #999;
-    font-weight: normal;
-}
-article .date + p {
-    margin-top: 2em;
-}
-article p + h2, article p + h3, article p + h4, article p + h5, article p + h6 {
-    margin-top: 1em;
-}
-
-/* Posts */
-.post {
-    padding: 2em 0;
 }
 
 /* Sub Pages with Multiple Column Layout */
@@ -575,7 +529,7 @@ article p + h2, article p + h3, article p + h4, article p + h5, article p + h6 {
     padding-bottom: 5em;
 }
 .subpage-navigation {
-    font-family: baskerville-urw, serif;
+    font-family: linotype-sabon, sans-serif;
     font-weight: 400;
     font-style: normal;
     padding: 0;
@@ -709,7 +663,7 @@ article p + h2, article p + h3, article p + h4, article p + h5, article p + h6 {
 /* #SITE NAVIGATION */
 /* Default Site Navigation Menu (both header & footer) */
 .site-navigation {
-    font-family: baskerville-urw, serif;
+    font-family: linotype-sabon, sans-serif;
     font-weight: 400;
     font-style: normal;
 }
@@ -893,7 +847,7 @@ form label {
     display: block;
 }
 form input, form textarea {
-    font-family: noto-sans, sans-serif;
+    font-family: baskerville-urw, serif;
     font-weight: 400;
     font-style: normal;
     font-size: 1em;
