fixed sticky on case study page

--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ body {
 
 /* GRID */
 section, .container {
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 /* @media (min-width: 768px) {
@@ -1041,9 +1041,21 @@ form input [type=reset]:hover {
 
 .case-study {
     h1 {
-        display: block;
+        /* the default is flex */
+    display: block;
+    margin-top: 0;
     }
     .sticky {
         /* Make text stay in position */
+        position: sticky;
+        top: 0;
+        padding-top: 3em;
+    }
+    .two-thirds {
+        overflow: visible;
+        position: relative;
+    }
+    .one-third {
+        
     }
 }
