--- a/css/style.css
+++ b/css/style.css
@@ -1071,15 +1071,41 @@ form input [type=reset]:hover {
 }
 
 .about {
-    img {
+    /* img {
         max-height: 200px;
         object-fit: cover;
         object-position:  50% 15%;
         @media (max-width: 767px) {
             object-position: 50% 20%;
         }
+    } */
+    .swiper {
+        width: 250px;
+        height: auto;
+
+        img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+    .swiper-slide {
+        display: grid;
+        grid-template-rows: 10fr 1fr;
+        padding: 15px;
+        border-radius: 10px;
+        background-color: #d3d2d6;
+        box-shadow: 0 0.5px 0 1px rgba(255, 255, 255, 0.2) inset, 0 1px 0 0 rgba(255, 255, 255, 0.6) inset, 0 4px 16px rgba(0, 0, 0, 0.1);
+        }
+        
+    .swiper-slide img {
+        aspect-ratio: 3/4;
+        border-radius: 5px;
+        pointer-events: none;
     }
 }
+  
 
 .no-deco {
     ul {
