--- a/css/style.css
+++ b/css/style.css
@@ -1095,7 +1095,7 @@ form input [type=reset]:hover {
         grid-template-rows: 10fr 1fr;
         padding: 15px;
         border-radius: 10px;
-        background-color: #d3d2d6;
+        background-color: rgba(183, 88, 88, 1);;
         box-shadow: 0 0.5px 0 1px rgba(255, 255, 255, 0.2) inset, 0 1px 0 0 rgba(255, 255, 255, 0.6) inset, 0 4px 16px rgba(0, 0, 0, 0.1);
         }
         
