--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,10 @@ img {
     max-width: 100%;
     height: auto;
 }
+video {
+    max-width: 100%;
+    height: auto;
+}
 
 /* #COMPONENTS */
 /* #BUTTONS */
@@ -513,9 +517,8 @@ body {
     border-top: 0px solid #ccc;
     padding-top: 1em;
     text-align: center;
-    @media (min-width: 768px) {
-        background-image: url(../img/footer-deco.jpg);
-    }
+    background-image: url(../img/footer-deco.jpg);
+    background-position: 50%;
     .container {
         padding-top: 0.25em;
         padding-bottom: 0.25em;
@@ -573,9 +576,10 @@ body {
     }
     .footer-logo {
         a img{
-            height: 75px;
+            height: 65px;
             width: auto;
             object-fit: cover;
+            margin: auto;
         }
     }
 }
@@ -724,6 +728,9 @@ section {
 .site-navigation ul.nav li a:hover {
     color: rgba(235, 125, 144, 1);
     font-weight: bold;
+    @media (max-width: 768px) {
+        color: rgba(251, 253, 223, 1);
+    }
 }
 .site-navigation ul li ul {
     border-top: none;
@@ -801,16 +808,15 @@ section {
         /* MENU BUTTON */
         /* TOGGLE NAV UL */
         background: rgba(183, 88, 88, 1);
-        
     }
     .toggle-nav .site-id {
         position: absolute;
 
     }
     .toggle-nav li a:hover {
-        color: rgba(76, 70, 70, 1);
-        /* color: rgba(251, 253, 223, 1); */
-        background: rgba(183, 88, 88, 1);
+        /* color: rgba(76, 70, 70, 1); */
+        color: rgba(251, 253, 223, 1);
+        background: rgba(235, 125, 144, 1); 
     }
     .toggle-nav .menu-button {
         margin: 0.8em 0;
@@ -819,7 +825,8 @@ section {
         border: none;
         /* padding: 0; */
         cursor: pointer;
-        color: rgba(76, 70, 70, 1);
+        /* color: rgba(76, 70, 70, 1); */
+        color: rgba(234, 245, 251, 1);
     }
     .toggle-nav .menu-button::selection {
         background-color: rgba(255 255 255 0);
@@ -828,7 +835,7 @@ section {
         color: rgba(255 255 255 0);
     }
     .toggle-nav .menu-button.navicon::after {
-        content: url(../img/menu_dark.svg);
+        content: url(../img/menu_light.svg);
         font-size: 1.5em;
         margin-top: -0.2em;
         margin-left: 0.1em;
@@ -840,7 +847,7 @@ section {
     }
 
     .toggle-nav[data-navstate=open] .menu-button.navicon::after {
-        content: url(../img/x_dark.svg);
+        content: url(../img/x_light.svg);
     }
 
     .toggle-nav ul {
@@ -858,6 +865,23 @@ section {
         padding: 0;
     }
 }
+/* .light-toggle-nav {
+    @media (max-width: 767px){
+        .toggle-nav .menu-button {
+            color: rgba(234, 245, 251, 1);
+        }
+        .toggle-nav li a:hover {
+        color: rgba(251, 253, 223, 1);
+        }
+        .toggle-nav .menu-button.navicon::after {
+            content: url(../img/menu_light.svg);    
+        }
+        .toggle-nav[data-navstate=open] .menu-button.navicon::after {
+            content: url(../img/x_light.svg);
+        }
+    }
+} */
+
 
 /* Animated Toggle-Nav Menu */
 @media (max-width: 767px) {
@@ -902,21 +926,7 @@ section {
 .home-page {
     .site-header a{
         color: rgba(234, 245, 251, 1);
-    }
-    @media (max-width: 767px){
-        .toggle-nav .menu-button {
-            color: rgba(234, 245, 251, 1);
-        }
-        .toggle-nav li a:hover {
-        color: rgba(251, 253, 223, 1);
-        }
-        .toggle-nav .menu-button.navicon::after {
-            content: url(../img/menu_light.svg);    
-        }
-    }
-        .toggle-nav[data-navstate=open] .menu-button.navicon::after {
-            content: url(../img/x_light.svg);
-        }
+    }        
     h1 {
         color: rgba(234, 245, 251, 1);
     }
@@ -1011,6 +1021,16 @@ section {
             object-position: 50% 20%;
         }
     } */
+    .about-animation {
+        margin-top: 2em;
+        padding: 0;
+        background-color: rgba(253, 247, 223, 1);
+    }
+    .resume {
+        padding-top: 2em;
+        background-color: rgba(253, 247, 223, 1);
+        
+    }
     .row .no-deco h3 {
         margin-top: 1.5em;
         margin-bottom: 5px;
